feat: add secure end point

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-PORT = :8085
-CORS = http://localhost:3000
+PORT=:8085
+CORS=http://localhost:3000
+AUTH0_DOMAIN=dev-hhln36iqhjgzkd4d.us.auth0.com
+AUTH0_AUDIENCE=https://dev-hhln36iqhjgzkd4d.us.auth0.com/api/v2/
